// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|LoaderWrapper custom no data 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-krvtoX fMwaVV"
  >
    <div
      className="sc-gipzik ukuNU"
    >
      No projects
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|LoaderWrapper loaded 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-krvtoX fMwaVV"
  >
    <div
      style={
        Object {
          "color": "white",
        }
      }
    >
      <h1>
        Test
      </h1>
      <h2>
        Ut elementum ex nulla
      </h2>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec pulvinar est.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|LoaderWrapper loading 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-krvtoX fMwaVV"
  >
    <div
      className="sc-eHgmQL gCbwae"
    >
      <span>
        Loading...
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|LoaderWrapper no data 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-krvtoX fMwaVV"
  >
    <div
      className="sc-gipzik ukuNU"
    >
      <span>
        No Data Found.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|LoaderWrapper with error 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-krvtoX fMwaVV"
  >
    <div
      className="sc-fYiAbW eZfVup"
    >
      Some error
    </div>
  </div>
</div>
`;
